--- a/8bitdrum_inspired_pt4.htm
+++ b/8bitdrum_inspired_pt4.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Countdown Page</title>
+<title>Joel LoFi</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -303,3 +303,4 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
