--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   color: var(--text-color);
+  background-attachment: fixed;
 }
 
 /* ===== HEADER ===== */
@@ -303,3 +304,4 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
