--- a/index.html
+++ b/index.html
@@ -27,14 +27,25 @@ body.light {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-  min-height: 100vh;
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   background-image: url("https://www.dropbox.com/scl/fi/1vl0w764bxwsp4z9uj1pl/mcnostalgia.png?rlkey=487r0qtkhdll5u8fjv9pmzq9p&st=fhskkjor&raw=1");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  z-index: -1;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
   color: var(--text-color);
-  background-attachment: fixed;
 }
 
 /* ===== HEADER ===== */
@@ -304,4 +315,5 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
