--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@ nav a:hover {
 }
 
 .custom-text {
-  padding-top: 139px;
-  margin-bottom: 24px;
+  margin-top: 3px;
+  padding-top: 26px;
+  padding-bottom: 26px;
+  margin-bottom: 3px;
   font-size: 20px;
   text-align: center;
   opacity: 0.9;
@@ -333,6 +335,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
