--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ nav a:hover {
 }
 
 .custom-text {
-  margin-top: 3px;
+  margin-top: 139px;
   padding-top: 26px;
   padding-bottom: 26px;
   margin-bottom: 3px;
@@ -167,6 +167,10 @@ nav a:hover {
   text-align: center;
   opacity: 0.9;
   cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   transition: transform 0.15s ease;
 }
 
@@ -335,6 +339,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
