--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@ nav a:hover {
 <body>
 <header>
   <div class="social-links">
-    <a href="https://twitter.com/YOUR_ACCOUNT" target="_blank" id="twitlink">
+    <a href="https://x.com/cfm_miku" target="_blank" id="twitlink">
       <img src="https://www.dropbox.com/scl/fi/gz0qiiyw0qljjcecijhmf/twitrlogo.png?rlkey=htvfk8koghsg79uyvnbe4bpms&st=uf4r4432&raw=1" alt="Twitter">
     </a>
-    <a href="https://instagram.com/YOUR_ACCOUNT" target="_blank" id="instlink">
+    <a href="https://instagram.com/cfm_miku_official" target="_blank" id="instlink">
       <img src="https://www.dropbox.com/scl/fi/i4zszxmevy9z114614au2/instalogo.png?rlkey=4hulc7ja6dukou2ceex2suwng&st=qjg5tos7&raw=1" alt="Instagram">
     </a>
-    <a href="https://youtube.com/YOUR_ACCOUNT" target="_blank" id="ytlink">
+    <a href="https://youtube.com/@HatsuneMiku" target="_blank" id="ytlink">
       <img src="https://www.dropbox.com/scl/fi/m71c4ky7cl7u2q0ip3gsn/OGYTlogo.png?rlkey=ss83g7iejyz7at0ovlwes8fsz&st=0x1gusx6&raw=1" alt="YouTube">
     </a>
   </div>
@@ -275,6 +275,15 @@ nav a:hover {
     </div>
 
     <img class="icon" src="https://www.dropbox.com/scl/fi/nq1eq7zjmx08g91uigs0s/mikucalm.png?rlkey=gjhm3r24y9ftkg14pmxtot26g&st=e6fpod8y&raw=1">
+    
+    <div class="social-links">
+      <a href="https://karent.jp" target="_blank" id="karent-link">
+        <img src="https://www.dropbox.com/scl/fi/fbekpzds1adm9grrdu0sq/karent.png?rlkey=186dzfi0galgcd7wg22bwwwmr&st=lo8kbr7r&raw=1" alt="Karent">
+      </a>
+      <a href="https://facebook.com/pages/Hatsune-Miku/10150149727825637" target="_blank" id="facebook-link">
+        <img src="https://www.dropbox.com/scl/fi/6egg76pe1cc059d0vye1t/fb.png?rlkey=ek02yrf3mku9u3hxrnjnrh4vm&st=52gkogdg&raw=1" alt="FaceBook">
+      </a>
+    </div>
   </div>
 </div>
 
@@ -356,6 +365,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
