--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@ body.light .social-links img {
   filter: brightness(0);
 }
 
+#karent-tab img {
+  width: 60px;
+}
+
+#facebook-tab img {
+  width: 80px;
+}
+
 nav {
   display: flex;
   gap: 20px;
@@ -275,14 +283,20 @@ nav a:hover {
     </div>
 
     <img class="icon" src="https://www.dropbox.com/scl/fi/nq1eq7zjmx08g91uigs0s/mikucalm.png?rlkey=gjhm3r24y9ftkg14pmxtot26g&st=e6fpod8y&raw=1">
+
+    <div class="custom-text">More Official Websites!</div>
     
     <div class="social-links">
-      <a href="https://karent.jp" target="_blank" id="karent-link">
-        <img src="https://www.dropbox.com/scl/fi/fbekpzds1adm9grrdu0sq/karent.png?rlkey=186dzfi0galgcd7wg22bwwwmr&st=lo8kbr7r&raw=1" alt="Karent">
-      </a>
-      <a href="https://facebook.com/pages/Hatsune-Miku/10150149727825637" target="_blank" id="facebook-link">
-        <img src="https://www.dropbox.com/scl/fi/6egg76pe1cc059d0vye1t/fb.png?rlkey=ek02yrf3mku9u3hxrnjnrh4vm&st=52gkogdg&raw=1" alt="FaceBook">
-      </a>
+      <div class="social-tab" id="karent-tab">
+        <a href="https://karent.jp" target="_blank" id="karent-link">
+          <img src="https://www.dropbox.com/scl/fi/fbekpzds1adm9grrdu0sq/karent.png?rlkey=186dzfi0galgcd7wg22bwwwmr&st=lo8kbr7r&raw=1" alt="Karent">
+        </a>
+      </div>
+      <div class="social-tab" id="facebook-tab">
+        <a href="https://facebook.com/pages/Hatsune-Miku/10150149727825637" target="_blank" id="facebook-link">
+          <img src="https://www.dropbox.com/scl/fi/6egg76pe1cc059d0vye1t/fb.png?rlkey=ek02yrf3mku9u3hxrnjnrh4vm&st=52gkogdg&raw=1" alt="FaceBook">
+        </a>
+      </div>
     </div>
   </div>
 </div>
@@ -365,6 +379,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
