--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ nav a:hover {
 
   <nav>
     <a href="#">Home</a>
-    <a href="#">Song List</a>
+    <a href="visualiser.html">Song List</a>
     <a href="#">Snacks</a>
     <a href="#">Warehouse</a>
   </nav>
@@ -308,7 +308,7 @@ nav a:hover {
 
   <div class="mobile-menu" id="mobileMenu">
     <a href="#">Home</a>
-    <a href="#">Song List</a>
+    <a href="visualiser.html">Song List</a>
     <a href="#">Snacks</a>
     <a href="#">Warehouse</a>
   </div>
@@ -433,6 +433,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
