--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@ body {
   padding: 0;
   min-height: 100vh;
   color: var(--text-color);
+  overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 /* ===== HEADER ===== */
@@ -433,6 +440,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
