--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   --header-bg: rgba(0,0,0,0.45);
 }
 
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+
 body.light {
   --glass-bg: rgba(255,255,255,0.55);
   --glass-border: rgba(255,255,255,0.6);
@@ -440,6 +449,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
