--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ nav a:hover {
   border-color: #5bc0ff;
 }
 
-#mikuoverlay {
+#mikuOverlay {
   position: fixed;
   inset: 0;
   display: flex;
@@ -189,7 +189,7 @@ nav a:hover {
   pointer-events: none;
 }
 
-#mikuoverlay video {
+#mikuOverlay video {
   max-width: 90vw;
   max-height: 90vh;
   width: auto;
@@ -479,6 +479,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
