--- a/index.html
+++ b/index.html
@@ -182,11 +182,13 @@ nav a:hover {
 
 #mikuOverlay {
   position: fixed;
-  inset: 0;
+  top: 10vh;
+  left: 10vw;
   display: flex;
   justify-content: center;
   align-items: center;
   pointer-events: none;
+  z-index: 39;
 }
 
 #mikuOverlay video {
@@ -205,7 +207,7 @@ nav a:hover {
   backdrop-filter: blur(14px);
   border-radius: 14px;
   display: none;
-  z-index: 9999; /* 👈 FIX: always on top */
+  z-index: 5; /* 👈 FIX: always on top */
   min-width: 180px;
 }
 
@@ -479,6 +481,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
