--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@ nav a:hover {
   position: fixed;
   top: 50vh;
   left: 10vw;
-  display: flex;
   justify-content: center;
   align-items: center;
   pointer-events: none;
   z-index: 39;
+  object-fit: cover;
 }
 
 #mikuOverlay video {
@@ -481,6 +481,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
