--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ nav a:hover {
 }
 
 #mikuOverlay {
-  position: fixed;
-  top: 50vh;
+  position: relative;
+  top: 10vh;
   left: 10vw;
   justify-content: center;
   align-items: center;
