--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ mmgEl.addEventListener("click", () => {
   });
   // Optional: add a quick visual feedback
   mmgEl.style.transform = "scale(1.1)";
-  const exist = mikuoverly.querySelection("video");
+  const exist = mikuoverly.querySelector("video");
   if (exist) {
     exist.remove();
   }
@@ -484,6 +484,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
