--- a/index.html
+++ b/index.html
@@ -181,21 +181,14 @@ nav a:hover {
 }
 
 #mikuOverlay {
-  position: relative;
-  top: 10vh;
-  left: 10vw;
-  justify-content: center;
-  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   pointer-events: none;
-  z-index: 39;
+  z-index: 3939;
   object-fit: cover;
-}
-
-#mikuOverlay video {
-  max-width: 90vw;
-  max-height: 90vh;
-  width: auto;
-  height: auto;
 }
 
 /* Mobile menu */
@@ -483,6 +476,7 @@ if (localStorage.getItem("theme") === "light") {
 <div id="mikuOverlay"></div>
 </body>
 </html>
+
 
 
 
