--- a/index.html
+++ b/index.html
@@ -191,6 +191,13 @@ nav a:hover {
   object-fit: cover;
 }
 
+#mikuOverlay video {
+  max-width: 90vw;
+  max-height: 90vh;
+  width: auto;
+  height: auto;
+}
+
 /* Mobile menu */
 .mobile-menu {
   position: absolute;
@@ -475,6 +482,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
