--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@ nav a:hover {
   max-height: 90vh;
   width: auto;
   height: auto;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Mobile menu */
@@ -482,6 +484,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
