--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ mmgEl.addEventListener("click", () => {
     exist.remove();
   }
   const mkgovideo = document.createElement("video");
-  mkgovideo.src = "assets/ARUOKREADYGO.webm";
+  mkgovideo.src = "assets/ARUOKREADYGO_smol.webm";
   mkgovideo.autoplay = true;
   mkgovideo.muted = true;
   mkgovideo.playsInLine = true;
@@ -484,6 +484,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
