--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@ nav a:hover {
   </div>
 
   <nav>
-    <a href="#">Home</a>
-    <a href="visualiser.html">Song List</a>
-    <a href="#">Snacks</a>
-    <a href="#">Warehouse</a>
+    <a href="#">Home</a> 
+    <a href="candy.html">Candy</a>  // Song List
+    <a href="cookie.html">Cookie</a>  // Snacks
+    <a href="#">Chocolate</a>  // Warehouse
   </nav>
 
   <div>
@@ -344,9 +344,9 @@ nav a:hover {
 
   <div class="mobile-menu" id="mobileMenu">
     <a href="#">Home</a>
-    <a href="visualiser.html">Song List</a>
-    <a href="#">Snacks</a>
-    <a href="#">Warehouse</a>
+    <a href="candy.html">Candy</a>
+    <a href="cookie.html">Cookie</a>
+    <a href="#">Chocolate</a>
   </div>
 </header>
 
@@ -484,6 +484,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
