--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@ nav a:hover {
 
   <nav>
     <a href="#">Home</a> 
-    <a href="candy.html">Candy</a>  // Song List
-    <a href="cookie.html">Cookie</a>  // Snacks
-    <a href="#">Chocolate</a>  // Warehouse
+    <a href="candy.html">Candy</a>
+    <a href="cookie.html">Cookie</a>
+    <a href="#">Chocolate</a>
   </nav>
 
   <div>
@@ -484,6 +484,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
