--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ nav a:hover {
     <a href="#">Home</a> 
     <a href="candy.html">Candy</a>
     <a href="cookie.html">Cookie</a>
-    <a href="#">Chocolate</a>
+    <a href="imagetopdf.html">Chocolate</a>
   </nav>
 
   <div>
@@ -346,7 +346,7 @@ nav a:hover {
     <a href="#">Home</a>
     <a href="candy.html">Candy</a>
     <a href="cookie.html">Cookie</a>
-    <a href="#">Chocolate</a>
+    <a href="imagetopdf.html">Chocolate</a>
   </div>
 </header>
 
@@ -484,6 +484,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
