--- a/imagetopdf.html
+++ b/imagetopdf.html
@@ -45,10 +45,14 @@
             margin-top: 20px;
         }
 
+        .slider-container {
+            margin-top: 15px;
+        }
+
         button {
             padding: 10px 15px;
             cursor: pointer;
-            margin-top: 10px;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -63,6 +67,24 @@
         PDF File Name:
         <input type="text" id="pdfName" value="my-images.pdf">
     </label>
+
+    <div class="slider-container">
+        <label>
+            Image Quality:
+            <strong><span id="qualityValue">0.8</span></strong>
+        </label>
+        <input
+            type="range"
+            id="qualitySlider"
+            min="0.2"
+            max="1"
+            step="0.1"
+            value="0.8"
+        >
+        <div style="font-size: 12px; color: #555;">
+            Lower = smaller file size • Higher = better quality
+        </div>
+    </div>
 </div>
 
 <div class="preview-container" id="preview"></div>
@@ -72,14 +94,20 @@
 <script>
     const imageInput = document.getElementById("imageInput");
     const preview = document.getElementById("preview");
+    const qualitySlider = document.getElementById("qualitySlider");
+    const qualityValue = document.getElementById("qualityValue");
 
     let images = [];
+
+    qualitySlider.addEventListener("input", () => {
+        qualityValue.textContent = qualitySlider.value;
+    });
 
     imageInput.addEventListener("change", () => {
         images = Array.from(imageInput.files);
         preview.innerHTML = "";
 
-        images.forEach((file, index) => {
+        images.forEach(file => {
             const reader = new FileReader();
             reader.onload = e => {
                 const div = document.createElement("div");
@@ -102,6 +130,7 @@
             return;
         }
 
+        const quality = parseFloat(qualitySlider.value);
         const { jsPDF } = window.jspdf;
         const pdf = new jsPDF();
 
@@ -127,7 +156,18 @@
             const y = (pageHeight - imgHeight) / 2;
 
             if (i > 0) pdf.addPage();
-            pdf.addImage(img, "JPEG", x, y, imgWidth, imgHeight);
+
+            pdf.addImage(
+                img,
+                "JPEG",
+                x,
+                y,
+                imgWidth,
+                imgHeight,
+                undefined,
+                "FAST",
+                quality
+            );
         }
 
         let filename = document.getElementById("pdfName").value.trim();
