--- a/imagetopdf.html
+++ b/imagetopdf.html
@@ -124,57 +124,54 @@
         });
     });
 
-    async function generatePDF() {
-        if (images.length === 0) {
-            alert("Please select at least one image.");
-            return;
-        }
-
-        const quality = parseFloat(qualitySlider.value);
-        const { jsPDF } = window.jspdf;
-        const pdf = new jsPDF();
-
-        for (let i = 0; i < images.length; i++) {
-            const imgData = await readFile(images[i]);
-            const img = new Image();
-            img.src = imgData;
-
-            await new Promise(resolve => img.onload = resolve);
-
-            const pageWidth = pdf.internal.pageSize.getWidth();
-            const pageHeight = pdf.internal.pageSize.getHeight();
-
-            const ratio = Math.min(
-                pageWidth / img.width,
-                pageHeight / img.height
-            );
-
-            const imgWidth = img.width * ratio;
-            const imgHeight = img.height * ratio;
-
-            const x = (pageWidth - imgWidth) / 2;
-            const y = (pageHeight - imgHeight) / 2;
-
-            if (i > 0) pdf.addPage();
-
-            pdf.addImage(
-                img,
-                "JPEG",
-                x,
-                y,
-                imgWidth,
-                imgHeight,
-                undefined,
-                "FAST",
-                quality
-            );
-        }
-
-        let filename = document.getElementById("pdfName").value.trim();
-        if (!filename.endsWith(".pdf")) filename += ".pdf";
-
-        pdf.save(filename);
+async function generatePDF() {
+    if (images.length === 0) {
+        alert("Please select at least one image.");
+        return;
     }
+
+    const quality = parseFloat(document.getElementById("qualitySlider").value);
+    const { jsPDF } = window.jspdf;
+    const pdf = new jsPDF();
+
+    for (let i = 0; i < images.length; i++) {
+        const imgData = await readFile(images[i]);
+        const img = new Image();
+        img.src = imgData;
+        await new Promise(resolve => img.onload = resolve);
+
+        // --- CANVAS COMPRESSION ---
+        const canvas = document.createElement("canvas");
+        const ctx = canvas.getContext("2d");
+
+        canvas.width = img.width;
+        canvas.height = img.height;
+        ctx.drawImage(img, 0, 0);
+
+        const compressedData = canvas.toDataURL("image/jpeg", quality);
+
+        const pageWidth = pdf.internal.pageSize.getWidth();
+        const pageHeight = pdf.internal.pageSize.getHeight();
+
+        const ratio = Math.min(
+            pageWidth / img.width,
+            pageHeight / img.height
+        );
+
+        const imgWidth = img.width * ratio;
+        const imgHeight = img.height * ratio;
+        const x = (pageWidth - imgWidth) / 2;
+        const y = (pageHeight - imgHeight) / 2;
+
+        if (i > 0) pdf.addPage();
+        pdf.addImage(compressedData, "JPEG", x, y, imgWidth, imgHeight);
+    }
+
+    let filename = document.getElementById("pdfName").value.trim();
+    if (!filename.endsWith(".pdf")) filename += ".pdf";
+
+    pdf.save(filename);
+}
 
     function readFile(file) {
         return new Promise(resolve => {
@@ -187,3 +184,4 @@
 
 </body>
 </html>
+
