--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body::before {
   height: 100vh;
   background-image:
     image-set(
-      url("assets/mcnostalgia.webp") type("image/webp"),
+      url("assets/MCnostalgica.webp") type("image/webp"),
       url("assets/mcnostalgia.png") type("image/png")
     );
   background-size: cover;
@@ -488,6 +488,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
