--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ nav a:hover {
     <a href="#">Home</a> 
     <a href="candy.html">Candy</a>
     <a href="cookie.html">Cookie</a>
-    <a href="imagetopdf.html">Chocolate</a>
+    <a href="hub.html">Chocolate</a>
   </nav>
 
   <div>
@@ -350,7 +350,7 @@ nav a:hover {
     <a href="#">Home</a>
     <a href="candy.html">Candy</a>
     <a href="cookie.html">Cookie</a>
-    <a href="imagetopdf.html">Chocolate</a>
+    <a href="hub.html">Chocolate</a>
   </div>
 </header>
 
@@ -488,6 +488,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
