--- a/hub.html
+++ b/hub.html
@@ -32,8 +32,8 @@
 <header>
   <h1>My Site</h1>
   <nav>
-    <a href="#home">imagetopdf</a>
-    <a href="#about">barcodetest</a>
+    <a href="#imagetopdf">Image2PDF</a>
+    <a href="#barcodetest">BC</a>
     <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
   </nav>
@@ -66,3 +66,4 @@
 
 </body>
 </html>
+
