--- a/MIKUMIKUMIKUGO/barcodetest.html
+++ b/MIKUMIKUMIKUGO/barcodetest.html
@@ -1,100 +1,106 @@
-<style>
-  /* Scope everything to this page */
-  .barcode-page {
-    min-height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-    color: #eee;
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Binary Barcode Generator</title>
+  <style>
+    body {
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(135deg, #1e1e2f, #2b2b45);
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      color: #eee;
+    }
 
-  .barcode-page .container {
-    background: rgba(255, 255, 255, 0.06);
-    backdrop-filter: blur(10px);
-    border-radius: 12px;
-    padding: 24px;
-    width: 90%;
-    max-width: 800px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-  }
+    .container {
+      background: rgba(255, 255, 255, 0.06);
+      backdrop-filter: blur(10px);
+      border-radius: 12px;
+      padding: 24px;
+      width: 90%;
+      max-width: 800px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+    }
 
-  .barcode-page h1 {
-    margin-top: 0;
-    font-size: 1.4rem;
-    text-align: center;
-  }
+    h1 {
+      margin-top: 0;
+      font-size: 1.4rem;
+      text-align: center;
+    }
 
-  .barcode-page textarea {
-    width: 100%;
-    height: 100px;
-    border-radius: 8px;
-    border: none;
-    padding: 12px;
-    font-family: monospace;
-    font-size: 14px;
-    resize: vertical;
-    box-sizing: border-box;
-    outline: none;
-  }
+    textarea {
+      width: 100%;
+      height: 100px;
+      border-radius: 8px;
+      border: none;
+      padding: 12px;
+      font-family: monospace;
+      font-size: 14px;
+      resize: vertical;
+      box-sizing: border-box;
+      outline: none;
+    }
 
-  .barcode-page button {
-    margin-top: 12px;
-    padding: 10px 16px;
-    border-radius: 8px;
-    border: none;
-    background: #4c6ef5;
-    color: white;
-    font-size: 14px;
-    cursor: pointer;
-  }
+    button {
+      margin-top: 12px;
+      padding: 10px 16px;
+      border-radius: 8px;
+      border: none;
+      background: #4c6ef5;
+      color: white;
+      font-size: 14px;
+      cursor: pointer;
+    }
 
-  .barcode-page button:hover {
-    background: #5c7cfa;
-  }
+    button:hover {
+      background: #5c7cfa;
+    }
 
-  .barcode-page .stats {
-    margin-top: 10px;
-    font-size: 13px;
-    opacity: 0.9;
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-  }
+    .stats {
+      margin-top: 10px;
+      font-size: 13px;
+      opacity: 0.9;
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
 
-  .barcode-page .barcode-wrapper {
-    margin-top: 20px;
-    padding: 16px;
-    background: #f5f5f5;
-    border-radius: 8px;
-    overflow-x: auto;
-  }
+    .barcode-wrapper {
+      margin-top: 20px;
+      padding: 16px;
+      background: #f5f5f5;
+      border-radius: 8px;
+      overflow-x: auto;
+    }
 
-  .barcode-page .barcode {
-    display: flex;
-    height: 120px;
-  }
+    .barcode {
+      display: flex;
+      height: 120px;
+    }
 
-  .barcode-page .bar {
-    width: 3px;
-    height: 100%;
-  }
+    .bar {
+      width: 3px;
+      height: 100%;
+    }
 
-  .barcode-page .bar.zero {
-    background: white;
-  }
+    .bar.zero {
+      background: white;
+    }
 
-  .barcode-page .bar.one {
-    background: black;
-  }
-</style>
-
-<div class="barcode-page">
+    .bar.one {
+      background: black;
+    }
+  </style>
+</head>
+<body>
   <div class="container">
     <h1>Binary → Barcode</h1>
 
     <textarea id="binaryInput" placeholder="Paste raw 0s and 1s here..."></textarea>
-    <button id="generateBtn">Generate Barcode</button>
+    <button onclick="generateBarcode()">Generate Barcode</button>
 
     <div class="stats">
       <div>Input digits: <strong id="inputCount">0</strong></div>
@@ -105,10 +111,8 @@
       <div id="barcode" class="barcode"></div>
     </div>
   </div>
-</div>
 
-<script>
-  (() => {
+  <script>
     function generateBarcode() {
       const input = document.getElementById("binaryInput").value;
       const barcode = document.getElementById("barcode");
@@ -116,23 +120,22 @@
       const outputCountEl = document.getElementById("outputCount");
 
       barcode.innerHTML = "";
+
       let validDigits = 0;
 
       for (const char of input) {
         if (char !== "0" && char !== "1") continue;
+
         validDigits++;
 
         const bar = document.createElement("div");
-        bar.className = "bar " + (char === "0" ? "zero" : "one");
+        bar.classList.add("bar", char === "0" ? "zero" : "one");
         barcode.appendChild(bar);
       }
 
       inputCountEl.textContent = validDigits;
       outputCountEl.textContent = validDigits;
     }
-
-    document
-      .getElementById("generateBtn")
-      .addEventListener("click", generateBarcode);
-  })();
-</script>
+  </script>
+</body>
+</html>
