--- a/hub.html
+++ b/hub.html
@@ -1,69 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My GitHub Pages Site</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <style>
-    body {
-      margin: 0;
-      font-family: system-ui, sans-serif;
-    }
-    header {
-      background: #111;
-      color: white;
-      padding: 1rem;
-    }
-    nav a {
-      color: white;
-      margin-right: 1rem;
-      text-decoration: none;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    main {
-      padding: 2rem;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Game Menu Hub</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #111;
+            color: #fff;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            margin-top: 40px;
+            font-size: 3em;
+            text-shadow: 2px 2px #000;
+        }
+
+        .menu-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 50px;
+            gap: 30px;
+        }
+
+        .menu-item {
+            width: 300px;
+            padding: 20px;
+            background-color: #222;
+            border: 2px solid #444;
+            border-radius: 15px;
+            font-size: 1.5em;
+            color: #fff;
+            text-decoration: none;
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+
+        .menu-item:hover {
+            transform: scale(1.1);
+        }
+
+        .menu-item img:hover {
+            transform: scale(1.1);
+        }
+    </style>
 </head>
 <body>
-
-<header>
-  <h1>My Site</h1>
-  <nav>
-    <a href="#imagetopdf">Image2PDF</a>
-    <a href="#barcodetest">BC</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
-
-<main id="content">
-  Loading...
-</main>
-
-<script>
-  async function loadPage(page) {
-    try {
-      const res = await fetch(`MIKUMIKUMIKUGO/${page}.html`);
-      if (!res.ok) throw new Error("Page not found");
-      document.getElementById("content").innerHTML = await res.text();
-    } catch (err) {
-      document.getElementById("content").innerHTML =
-        "<h2>404</h2><p>Page not found.</p>";
-    }
-  }
-
-  function handleRoute() {
-    const page = location.hash.replace("#", "") || "home";
-    loadPage(page);
-  }
-
-  window.addEventListener("hashchange", handleRoute);
-  window.addEventListener("load", handleRoute);
-</script>
-
+    <h1>My Game Menu Hub</h1>
+    <div class="menu-container">
+        <a href="imagetopdf.html" class="menu-item">
+            <img src="assets/banners/imagetopdf_banner.png" alt="Image to PDF" style="width:100%; border-radius: 10px;">
+        <a href="barcodetest.html" class="menu-item">Barcode Test</a>
+            <img src="assets/banners/bactesting_banner.png" alt="Barcode Test" style="width:100%; border-radius: 10px;">
+        <!-- Future menu items -->
+    </div>
 </body>
 </html>
-
