--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ nav a:hover {
   </div>
 
   <nav>
-    <a href="#">Home</a> 
+    <a href="audioanalysistestnya.html">MUSIC</a> 
     <a href="candy.html">Candy</a>
     <a href="cookie.html">Cookie</a>
     <a href="hub.html">Chocolate</a>
@@ -368,7 +368,7 @@ nav a:hover {
   </div>
 
   <div class="mobile-menu" id="mobileMenu">
-    <a href="#">Home</a>
+    <a href="audioanalysistestnya.html">MUSIC</a>
     <a href="candy.html">Candy</a>
     <a href="cookie.html">Cookie</a>
     <a href="hub.html">Chocolate</a>
@@ -510,6 +510,7 @@ if (localStorage.getItem("theme") === "light") {
 </script>
 </body>
 </html>
+
 
 
 
